[gd_scene load_steps=90 format=3 uid="uid://cnpcm2juvcutu"]

[ext_resource type="Shader" path="res://shaders/PaletteSwap.gdshader" id="1_hk0hv"]
[ext_resource type="Script" path="res://scenes/Objects/Players/copy_robot.gd" id="2_we56i"]
[ext_resource type="AudioStream" uid="uid://d2oevy2xek073" path="res://sounds/jump.wav" id="4_8xyqo"]
[ext_resource type="Texture2D" uid="uid://bot48w7086agv" path="res://sprites/Players/HurtStar.png" id="4_a3x8f"]
[ext_resource type="Texture2D" uid="uid://dolddeab1tc5g" path="res://sprites/Players/Copy Robot/spritesheet.png" id="4_oq3cr"]
[ext_resource type="Texture2D" uid="uid://8mdvvlmmrxfn" path="res://sprites/Players/HurtSweat.png" id="5_am6d3"]
[ext_resource type="AudioStream" uid="uid://cgaetckoiu15m" path="res://sounds/land.wav" id="5_sdcle"]
[ext_resource type="AudioStream" uid="uid://h87d8b65n30n" path="res://sounds/slide.wav" id="6_fcc4r"]
[ext_resource type="AudioStream" uid="uid://dr1p57c1kr6na" path="res://sounds/warp.wav" id="8_i1h0k"]
[ext_resource type="AudioStream" uid="uid://ds4m68uui1avq" path="res://sounds/switch.wav" id="8_utf8u"]
[ext_resource type="AudioStream" uid="uid://b5ogbbgcst441" path="res://sounds/start_copy.wav" id="9_xhkjd"]
[ext_resource type="AudioStream" uid="uid://brqoxbrriuifw" path="res://sounds/charged.wav" id="11_55w7a"]
[ext_resource type="AudioStream" uid="uid://cojuek45oo3hj" path="res://sounds/playerhurt.wav" id="11_scrgg"]
[ext_resource type="AudioStream" uid="uid://dtctuhq14tsqk" path="res://sounds/charge1.wav" id="12_y5pge"]
[ext_resource type="AudioStream" uid="uid://dix6rlhdr84oa" path="res://sounds/mega_death.wav" id="14_cy0jf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qymoq"]
shader = ExtResource("1_hk0hv")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/fps = 6.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7773x"]
shader = ExtResource("1_hk0hv")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/fps = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_7ghvl"]
atlas = ExtResource("4_oq3cr")
region = Rect2(2408, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv26p"]
atlas = ExtResource("4_oq3cr")
region = Rect2(2464, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3337"]
atlas = ExtResource("4_oq3cr")
region = Rect2(3304, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oboac"]
atlas = ExtResource("4_oq3cr")
region = Rect2(3360, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwo5n"]
atlas = ExtResource("4_oq3cr")
region = Rect2(3416, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tm8x"]
atlas = ExtResource("4_oq3cr")
region = Rect2(3472, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdwk1"]
atlas = ExtResource("4_oq3cr")
region = Rect2(1624, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2rhe"]
atlas = ExtResource("4_oq3cr")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_71h4d"]
atlas = ExtResource("4_oq3cr")
region = Rect2(56, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_47i70"]
atlas = ExtResource("4_oq3cr")
region = Rect2(112, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b87k1"]
atlas = ExtResource("4_oq3cr")
region = Rect2(168, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mjvx"]
atlas = ExtResource("4_oq3cr")
region = Rect2(2968, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hx5km"]
atlas = ExtResource("4_oq3cr")
region = Rect2(3024, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_re8sl"]
atlas = ExtResource("4_oq3cr")
region = Rect2(3080, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sw1y7"]
atlas = ExtResource("4_oq3cr")
region = Rect2(672, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_quv6l"]
atlas = ExtResource("4_oq3cr")
region = Rect2(728, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j7c8"]
atlas = ExtResource("4_oq3cr")
region = Rect2(2632, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7c0k"]
atlas = ExtResource("4_oq3cr")
region = Rect2(2688, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5rwj"]
atlas = ExtResource("4_oq3cr")
region = Rect2(2744, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtdkh"]
atlas = ExtResource("4_oq3cr")
region = Rect2(2240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ijke"]
atlas = ExtResource("4_oq3cr")
region = Rect2(2296, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxdhj"]
atlas = ExtResource("4_oq3cr")
region = Rect2(2352, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_808dt"]
atlas = ExtResource("4_oq3cr")
region = Rect2(3136, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_awq0h"]
atlas = ExtResource("4_oq3cr")
region = Rect2(3192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k27ev"]
atlas = ExtResource("4_oq3cr")
region = Rect2(3248, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ld221"]
atlas = ExtResource("4_oq3cr")
region = Rect2(2520, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfs1q"]
atlas = ExtResource("4_oq3cr")
region = Rect2(2576, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oo7m2"]
atlas = ExtResource("4_oq3cr")
region = Rect2(2800, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_snxvb"]
atlas = ExtResource("4_oq3cr")
region = Rect2(2856, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6n2a"]
atlas = ExtResource("4_oq3cr")
region = Rect2(2912, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1al3"]
atlas = ExtResource("4_oq3cr")
region = Rect2(3528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnb0q"]
atlas = ExtResource("4_oq3cr")
region = Rect2(3584, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_etcdo"]
atlas = ExtResource("4_oq3cr")
region = Rect2(3640, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tifiv"]
atlas = ExtResource("4_oq3cr")
region = Rect2(3696, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dblp"]
atlas = ExtResource("4_oq3cr")
region = Rect2(3808, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_68ynr"]
atlas = ExtResource("4_oq3cr")
region = Rect2(3752, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1ad5"]
atlas = ExtResource("4_oq3cr")
region = Rect2(2128, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0bag"]
atlas = ExtResource("4_oq3cr")
region = Rect2(2184, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fd7y"]
atlas = ExtResource("4_oq3cr")
region = Rect2(224, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwkav"]
atlas = ExtResource("4_oq3cr")
region = Rect2(280, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pclir"]
atlas = ExtResource("4_oq3cr")
region = Rect2(1568, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ava7c"]
atlas = ExtResource("4_oq3cr")
region = Rect2(1512, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e78ah"]
atlas = ExtResource("4_oq3cr")
region = Rect2(1456, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5aob"]
atlas = ExtResource("4_oq3cr")
region = Rect2(1400, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6py1"]
atlas = ExtResource("4_oq3cr")
region = Rect2(1344, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmtnn"]
atlas = ExtResource("4_oq3cr")
region = Rect2(1288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wces6"]
atlas = ExtResource("4_oq3cr")
region = Rect2(1232, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1f2n"]
atlas = ExtResource("4_oq3cr")
region = Rect2(1176, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dodo"]
atlas = ExtResource("4_oq3cr")
region = Rect2(1120, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7l7w"]
atlas = ExtResource("4_oq3cr")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_co07t"]
atlas = ExtResource("4_oq3cr")
region = Rect2(392, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0c37e"]
atlas = ExtResource("4_oq3cr")
region = Rect2(448, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbogt"]
atlas = ExtResource("4_oq3cr")
region = Rect2(504, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cbvl"]
atlas = ExtResource("4_oq3cr")
region = Rect2(560, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmv7e"]
atlas = ExtResource("4_oq3cr")
region = Rect2(616, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrmqh"]
atlas = ExtResource("4_oq3cr")
region = Rect2(784, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3s1hm"]
atlas = ExtResource("4_oq3cr")
region = Rect2(840, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqenk"]
atlas = ExtResource("4_oq3cr")
region = Rect2(896, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_387k8"]
atlas = ExtResource("4_oq3cr")
region = Rect2(952, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5og38"]
atlas = ExtResource("4_oq3cr")
region = Rect2(1008, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4l8n6"]
atlas = ExtResource("4_oq3cr")
region = Rect2(1064, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_kjdkg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ghvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xv26p")
}],
"loop": true,
"name": &"Fall",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3337")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oboac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwo5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tm8x")
}],
"loop": false,
"name": &"FinShredder",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdwk1")
}],
"loop": true,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2rhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71h4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2rhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71h4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2rhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71h4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2rhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71h4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2rhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71h4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2rhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71h4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2rhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71h4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2rhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71h4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47i70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b87k1")
}],
"loop": true,
"name": &"Idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mjvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hx5km")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re8sl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re8sl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re8sl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re8sl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re8sl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re8sl")
}],
"loop": false,
"name": &"Idle-Shield",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sw1y7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quv6l")
}],
"loop": true,
"name": &"Idle-Shoot",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j7c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7c0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5rwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5rwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5rwj")
}],
"loop": false,
"name": &"Idle-Throw",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtdkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ijke")
}],
"loop": true,
"name": &"Jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxdhj")
}],
"loop": false,
"name": &"Jump Transition",
"speed": 8.57
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_808dt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awq0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k27ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k27ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k27ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k27ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k27ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k27ev")
}],
"loop": false,
"name": &"Jump-Shield",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ld221")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfs1q")
}],
"loop": true,
"name": &"Jump-Shoot",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oo7m2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snxvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6n2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6n2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6n2a")
}],
"loop": false,
"name": &"Jump-Throw",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1al3")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_wnb0q")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_etcdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tifiv")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_etcdo")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_wnb0q")
}],
"loop": true,
"name": &"Ladder",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dblp")
}],
"loop": true,
"name": &"Ladder-Shoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_68ynr")
}],
"loop": true,
"name": &"Ladder-Up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"None",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1ad5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0bag")
}],
"loop": true,
"name": &"Slide",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fd7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwkav")
}],
"loop": false,
"name": &"Step",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pclir")
}],
"loop": true,
"name": &"Teleport",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ava7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e78ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5aob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6py1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmtnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wces6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1f2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dodo")
}],
"loop": false,
"name": &"Teleport In",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7l7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co07t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0c37e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbogt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cbvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmv7e")
}],
"loop": true,
"name": &"Walk",
"speed": 8.57
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrmqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3s1hm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqenk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_387k8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5og38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l8n6")
}],
"loop": true,
"name": &"Walk-Shoot",
"speed": 8.57
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_biy2v"]
atlas = ExtResource("4_a3x8f")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_7po6x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_biy2v")
}],
"loop": true,
"name": &"new_animation",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_fomdo"]
atlas = ExtResource("5_am6d3")
region = Rect2(0, 0, 26, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n3ss"]
atlas = ExtResource("5_am6d3")
region = Rect2(0, 8, 26, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_52yde"]
atlas = ExtResource("5_am6d3")
region = Rect2(0, 16, 26, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_ya8ic"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fomdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n3ss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52yde")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"active",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gv3ns"]
size = Vector2(14, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k00s1"]
size = Vector2(16, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ri683"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1foj6"]

[node name="Copy Robot" type="CharacterBody2D" groups=["Player"]]
material = SubResource("ShaderMaterial_qymoq")
collision_layer = 2
collision_mask = 17
floor_snap_length = 5.0
script = ExtResource("2_we56i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_7773x")
sprite_frames = SubResource("SpriteFrames_kjdkg")
animation = &"Ladder"
autoplay = "Teleport"

[node name="FX" type="Node2D" parent="."]
position = Vector2(0, 2)
rotation = -3.14159
scale = Vector2(1, -1)

[node name="Starburst" type="AnimatedSprite2D" parent="FX"]
visible = false
sprite_frames = SubResource("SpriteFrames_7po6x")
animation = &"new_animation"
autoplay = "new_animation"

[node name="Sweat" type="AnimatedSprite2D" parent="FX"]
position = Vector2(1.48619e-06, -17)
sprite_frames = SubResource("SpriteFrames_ya8ic")

[node name="MainHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_gv3ns")

[node name="SlideHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_k00s1")
disabled = true

[node name="StateTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="InvulTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="PainTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Audio" type="Node" parent="."]

[node name="JumpSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_8xyqo")
bus = &"SFX"

[node name="LandSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_sdcle")
bus = &"SFX"

[node name="SlideSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_fcc4r")
bus = &"SFX"

[node name="SwitchSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("8_utf8u")
bus = &"SFX"

[node name="WarpInSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("8_i1h0k")
volume_db = -8.0
bus = &"SFX"

[node name="HurtSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("11_scrgg")

[node name="Charge1" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("12_y5pge")

[node name="Charge2" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("11_55w7a")

[node name="DeathSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("14_cy0jf")
volume_db = -16.0

[node name="StartSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("9_xhkjd")

[node name="CeilingCheck" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, 12)
target_position = Vector2(0, -12)

[node name="LadderCheck" type="ShapeCast2D" parent="."]
visible = false
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_ri683")
target_position = Vector2(0, 0)
max_results = 1
collide_with_areas = true
collide_with_bodies = false

[node name="TopLadderCheck" type="ShapeCast2D" parent="."]
visible = false
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_1foj6")
target_position = Vector2(0, 0)
